--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "rootDirectory": "nextsite",
+  "framework": "nextjs",
   "buildCommand": "npm run build",
   "installCommand": "npm install",
-  "outputDirectory": ".next",
-  "framework": "nextjs"
+  "outputDirectory": ".next"
 } 
